# orchard-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: buckshot.yml  ci.yml  publish.yml
orchard/: defaults.py
orchard/app/: ipc_dispatch.py  model_registry.py  model_resolver.py
orchard/cli/: main.py  preload_manifest.py
orchard/clients/: __init__.py  client.py  moondream.py  privacy_filter.py  responses.py
orchard/engine/: __init__.py  fetch.py  inference_engine.py  io.py  multiprocess.py
orchard/formatter/: control_tokens.py  formatter.py  multimodal.py
orchard/ipc/: endpoints.py  serialization.py
orchard/server/: app.py
orchard/server/models/: completions.py  reasoning.py  tools.py
orchard/server/routes/: _common.py  chat.py  completions.py  embeddings.py  responses.py
orchard/server/utils/: batching.py
scripts/: buckshot_gate.sh
src/orchard/app/: ipc_dispatch.py  model_registry.py  model_resolver.py
src/orchard/cli/: __init__.py  main.py  preload_manifest.py
src/orchard/clients/: __init__.py  client.py  moondream.py
src/orchard/engine/: global_context.py  inference_engine.py  io.py  multiprocess.py
src/orchard/formatter/: __init__.py  formatter.py  multimodal.py
src/orchard/ipc/: endpoints.py  serialization.py
src/orchard/server/: app.py  dependencies.py
tests/: conftest.py  helpers.py  models.py  test_buckshot.py  test_e2e_basic.py  test_e2e_batching.py  test_e2e_best_of.py  test_e2e_capabilities.py  test_e2e_client.py  test_e2e_determinism.py  test_e2e_embeddings.py  test_e2e_logprobs.py  test_e2e_multi_candidate.py  test_e2e_multi_token.py  test_e2e_multimodal.py  test_e2e_responses_basic.py  test_e2e_responses_client.py  test_e2e_responses_structured.py  test_e2e_responses_tools.py  test_e2e_stop_sequences.py  test_e2e_structured_generation.py  test_e2e_unicode_payload.py  test_gptoss_anomaly_catch.py  test_gptoss_position_probe.py  test_gptoss_probe.py  test_gptoss_row_probe.py
tests/functional/: __init__.py  conftest.py  test_basic.py  test_best_of.py  test_capabilities.py  test_client.py  test_determinism.py  test_e2e_basic.py  test_e2e_capabilities.py  test_e2e_client.py  test_e2e_determinism.py  test_e2e_multi_candidate.py  test_e2e_multi_token.py  test_e2e_unicode_payload.py  test_logprobs.py  test_matrix.py  test_multimodal.py  test_responses_basic.py  test_responses_client.py  test_responses_structured.py  test_responses_tools.py  test_unicode_payload.py
tests/functional/cases/: _timeout.py  basic.py  batching.py  best_of.py  capabilities.py  determinism.py  embeddings.py  logprobs.py  multi_candidate.py  multi_token.py  multimodal.py  registry.py  responses_basic.py  responses_client.py  responses_structured.py  responses_tools.py  stop_sequences.py  structured_generation.py
tests/golden/: README.md  conftest.py  golden_io.py  test_audio_telephone.py  test_image_tool_result_grounding.py  test_matrix.py  test_multi_tool.py  test_reason_then_structured.py  test_reason_then_tool.py  test_thinking_on_off.py  test_tool_chaining.py  test_tool_result_grounding.py  test_tool_selection.py
tests/unit/: test_chat_non_streaming.py  test_client_render_prompt.py  test_inference_engine.py  test_ipc_dispatch.py  test_ipc_serialization.py  test_model_registry.py  test_model_resolver.py  test_privacy_filter_client.py  test_responses_types.py  test_stream_session_cancel.py
(+84 files in other folders)
