[project]
name = "orchard"
version = "2025.12.01"
description = "Python client for Orchard, a compute platform for Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pillow",
    "huggingface-hub",
    "fastapi[standard]",
    "pydantic-settings",
    "jinja2",
    "sse_starlette",
    "filelock",
    "pynng"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "build",
    "twine",
    "ruff",
    "pre-commit",
    "ty>=0.0.1a29",
]
